--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-cups (0.18) bionic; urgency=medium
+
+  * Initial release for bionic
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 15 Oct 2018 12:11:39 +0200
+
 n4d-cups (0.8) xenial; urgency=medium
 
   * Set browsing off
