--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-cups (0.19) bionic; urgency=medium
+
+  * Adding sudo group
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 14 Feb 2019 10:42:34 +0100
+
 n4d-cups (0.18) bionic; urgency=medium
 
   * Initial release for bionic
